feat: API서버 - 유저 프로필 이미지 관련
 - user_profile_image_path 컬럼의 기본값 수정
 - 유저 이미지 업로드 응답값 수정

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -12,7 +12,7 @@
     <hr />
 
     <form name="profile">
-      <img src="../static/profileImg/defaultProfile.jpeg" class="person" alt="Default Image" />
+      <img src="http://localhost:8001/api/static/profileImg/defaultProfile.jpeg" class="person" alt="Default Image" />
       <input type="file" id="fileInput" style="display: none" onchange="userProfileImgUpload()" />
       <div class="uploadBtnBox" style="width: 40px; height: 40px; border-radius: 70%; overflow: hidden">
         <svg
