refactor: API 서버 userAPI 모델 사용부분  몽구스로 변경

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -44,7 +44,7 @@
 
       axios({
         method: 'post',
-        url: '/api/user/profile/img',
+        url: '/api/user/profile/img/mongoose',
         data: formData,
         header: {
           'Content-Type': 'multipart/form-data',
