feat: 로그인 후 socketID 갱신될 떄마다 db에 업데이트되도록 미들웨어 설정

--- a/server/views/client.ejs
+++ b/server/views/client.ejs
@@ -15,6 +15,12 @@
             socket.on('newNotice',async(data)=>{
                 console.log('공지사항 등록 알람!!',data)
             })
+            socket.on('newGroupRequest',async(data)=>{
+                console.log('그룹 요청 알림!!',data)
+            })
+            socket.on('newGroupApprove',async(data)=>{
+                console.log('그룹 수락 알림!!',data)
+            })
         });
     </script>
 </body>
